--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-    <title>Simple Weather Dashbaord</title>
+    <title>Simple Weather Dashboard</title>
 </head>
 
 <body>
